// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Zone List Screen Renders Get Zone Name Error Modal if errorVisible is set to true 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Error"
    onClose={[Function]}
  >
    <mockMaterialCommunityIcons
      color="#f44336"
      name="alert"
      size={30}
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      [missing "en.LOCATION.ZONE_NAME_ERROR" translation]
    </Text>
    <View
      style={
        Object {
          "alignContent": "space-around",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 10,
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#D6512D"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrCancel"
        title="[missing \\"en.GENERICS.CANCEL\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrRetry"
        title="[missing \\"en.GENERICS.RETRY\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <LocationHeader
    details="0 [missing \\"en.LOCATION.ZONES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.GENERICS.CLUB\\" translation] 5522"
  />
  <FlatList
    ListEmptyComponent={<NoZonesMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Test Zone List Screen Renders Manual Scan Component when isManualScanEnabled is set to true 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <mockMaterialCommunityIcons
      color="#f44336"
      name="alert"
      size={30}
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      [missing "en.LOCATION.ZONE_NAME_ERROR" translation]
    </Text>
    <View
      style={
        Object {
          "alignContent": "space-around",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 10,
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#D6512D"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrCancel"
        title="[missing \\"en.GENERICS.CANCEL\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrRetry"
        title="[missing \\"en.GENERICS.RETRY\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.ZONES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.GENERICS.CLUB\\" translation] 5522"
  />
  <FlatList
    ListEmptyComponent={<NoZonesMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Test Zone List Screen Renders Zone Screen with Data 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <mockMaterialCommunityIcons
      color="#f44336"
      name="alert"
      size={30}
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      [missing "en.LOCATION.ZONE_NAME_ERROR" translation]
    </Text>
    <View
      style={
        Object {
          "alignContent": "space-around",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 10,
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#D6512D"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrCancel"
        title="[missing \\"en.GENERICS.CANCEL\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrRetry"
        title="[missing \\"en.GENERICS.RETRY\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <LocationHeader
    details="35 [missing \\"en.LOCATION.ZONES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.GENERICS.CLUB\\" translation] 5522"
  />
  <FlatList
    ListEmptyComponent={<NoZonesMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={
      Array [
        Object {
          "aisleCount": 30,
          "zoneId": 2,
          "zoneName": "ABAR",
        },
        Object {
          "aisleCount": 0,
          "zoneId": 1355,
          "zoneName": "ANEX",
        },
        Object {
          "aisleCount": 3,
          "zoneId": 1079,
          "zoneName": "BLAN",
        },
        Object {
          "aisleCount": 1,
          "zoneId": 774,
          "zoneName": "BUNK",
        },
        Object {
          "aisleCount": 1,
          "zoneId": 381,
          "zoneName": "CAJA",
        },
        Object {
          "aisleCount": 3,
          "zoneId": 751,
          "zoneName": "CARN",
        },
        Object {
          "aisleCount": 9,
          "zoneId": 807,
          "zoneName": "CONG",
        },
        Object {
          "aisleCount": 2,
          "zoneId": 763,
          "zoneName": "DELI",
        },
        Object {
          "aisleCount": 2,
          "zoneId": 1455,
          "zoneName": "DEVO",
        },
        Object {
          "aisleCount": 6,
          "zoneId": 635,
          "zoneName": "DULC",
        },
        Object {
          "aisleCount": 9,
          "zoneId": 873,
          "zoneName": "ELEC",
        },
        Object {
          "aisleCount": 5,
          "zoneId": 1394,
          "zoneName": "FARM",
        },
        Object {
          "aisleCount": 2,
          "zoneId": 612,
          "zoneName": "FERR",
        },
        Object {
          "aisleCount": 7,
          "zoneId": 433,
          "zoneName": "FLEX",
        },
        Object {
          "aisleCount": 3,
          "zoneId": 727,
          "zoneName": "FRUT",
        },
        Object {
          "aisleCount": 2,
          "zoneId": 995,
          "zoneName": "GOUR",
        },
        Object {
          "aisleCount": 4,
          "zoneId": 574,
          "zoneName": "HOGA",
        },
        Object {
          "aisleCount": 0,
          "zoneId": 1305,
          "zoneName": "LLAN",
        },
        Object {
          "aisleCount": 16,
          "zoneId": 12,
          "zoneName": "MGEN",
        },
        Object {
          "aisleCount": 2,
          "zoneId": 986,
          "zoneName": "MOTO",
        },
        Object {
          "aisleCount": 1,
          "zoneId": 925,
          "zoneName": "PAAB",
        },
        Object {
          "aisleCount": 3,
          "zoneId": 926,
          "zoneName": "PADE",
        },
        Object {
          "aisleCount": 1,
          "zoneId": 394,
          "zoneName": "PAMG",
        },
        Object {
          "aisleCount": 4,
          "zoneId": 854,
          "zoneName": "PANA",
        },
        Object {
          "aisleCount": 16,
          "zoneId": 994,
          "zoneName": "PODA",
        },
        Object {
          "aisleCount": 15,
          "zoneId": 993,
          "zoneName": "PODM",
        },
        Object {
          "aisleCount": 1,
          "zoneId": 1556,
          "zoneName": "RECI",
        },
        Object {
          "aisleCount": 5,
          "zoneId": 780,
          "zoneName": "REFR",
        },
        Object {
          "aisleCount": 2,
          "zoneId": 1,
          "zoneName": "RIEL",
        },
        Object {
          "aisleCount": 24,
          "zoneId": 476,
          "zoneName": "ROPA",
        },
        Object {
          "aisleCount": 7,
          "zoneId": 636,
          "zoneName": "SERV",
        },
        Object {
          "aisleCount": 10,
          "zoneId": 1218,
          "zoneName": "TECN",
        },
        Object {
          "aisleCount": 3,
          "zoneId": 698,
          "zoneName": "TOCA",
        },
        Object {
          "aisleCount": 7,
          "zoneId": 992,
          "zoneName": "VINO",
        },
        Object {
          "aisleCount": 1,
          "zoneId": 743,
          "zoneName": "WALK",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Test Zone List Screen Renders Zone Screen with Empty Data 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <mockMaterialCommunityIcons
      color="#f44336"
      name="alert"
      size={30}
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      [missing "en.LOCATION.ZONE_NAME_ERROR" translation]
    </Text>
    <View
      style={
        Object {
          "alignContent": "space-around",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 10,
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#D6512D"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrCancel"
        title="[missing \\"en.GENERICS.CANCEL\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrRetry"
        title="[missing \\"en.GENERICS.RETRY\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <LocationHeader
    details="0 [missing \\"en.LOCATION.ZONES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.GENERICS.CLUB\\" translation] 5522"
  />
  <FlatList
    ListEmptyComponent={<NoZonesMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Test Zone List Screen Renders Zone Screen with no-zones-message when get all zones response is 204 1`] = `
<View>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <mockMaterialCommunityIcons
      color="#f44336"
      name="alert"
      size={30}
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      [missing "en.LOCATION.ZONE_NAME_ERROR" translation]
    </Text>
    <View
      style={
        Object {
          "alignContent": "space-around",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 10,
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#D6512D"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrCancel"
        title="[missing \\"en.GENERICS.CANCEL\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
        testID="btnErrRetry"
        title="[missing \\"en.GENERICS.RETRY\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <LocationHeader
    details="0 [missing \\"en.LOCATION.ZONES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.GENERICS.CLUB\\" translation] 5522"
  />
  <FlatList
    ListEmptyComponent={<NoZonesMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Test Zone List Screen Test Get Zone Api Response Renders Error Message when result is 400 error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockMaterialCommunityIcons
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Zone List Screen Test Get Zone Api Response Renders Error Message when result is 424 error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockMaterialCommunityIcons
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Zone List Screen Test Get Zone Api Response Renders Error Message when result is 500 error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockMaterialCommunityIcons
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Zone List Screen Test Get Zone Api Response Renders Error Message when result is network error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockMaterialCommunityIcons
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Zone List Screen Test Get Zone Api Response Renders Error Message when result is timeout error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockMaterialCommunityIcons
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Zone List Screen Test Get Zone Api Response Renders loading indicator when waiting for Zone Api response 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`Test ZoneList render ZoneList with default value 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        undefined,
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "bottom": 0,
          "overflow": "hidden",
          "top": 0,
        },
      ]
    }
  />,
  <View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      transparent={true}
      visible={false}
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#eeeeee",
          "borderBottomWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginHorizontal": 0,
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text>
          [missing "en.GENERICS.CLUB" translation] 0
        </Text>
        <Text
          style={
            Object {
              "color": "#9e9e9e",
              "fontSize": 12,
            }
          }
        >
          0 [missing "en.LOCATION.ZONES" translation]
        </Text>
      </View>
    </View>
    <RCTScrollView
      ListEmptyComponent={<NoZonesMessage />}
      contentContainerStyle={
        Object {
          "paddingBottom": 100,
        }
      }
      data={Array []}
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      viewabilityConfigCallbackPairs={Array []}
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
              "paddingTop": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#616161",
              }
            }
          >
            [missing "en.LOCATION.NO_ZONES_AVAILABLE" translation]
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`Test getZoneErrorModal render getZoneErrorModal with default value 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#00000099",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignSelf": "center",
            "backgroundColor": "#ffffffff",
            "borderColor": "#545F7A",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1,
            "justifyContent": "center",
            "padding": 10,
            "width": "80%",
          },
          Object {
            "minHeight": undefined,
          },
        ]
      }
    >
      <mockMaterialCommunityIcons
        color="#f44336"
        name="alert"
        size={30}
        style={
          Object {
            "alignSelf": "center",
          }
        }
      />
      <Text
        style={
          Object {
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.ZONE_NAME_ERROR" translation]
      </Text>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginTop": 10,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 45,
              },
              Object {
                "flex": 1,
                "paddingHorizontal": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#D6512D",
                  "borderRadius": 5,
                  "elevation": 1,
                  "flex": 1,
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
              testID="btnErrCancel"
            >
              <Text
                style={
                  Object {
                    "color": "#ffffffff",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 16,
                    "fontWeight": "normal",
                    "textAlign": undefined,
                  }
                }
              >
                [missing "en.GENERICS.CANCEL" translation]
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "height": 45,
              },
              Object {
                "flex": 1,
                "paddingHorizontal": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#0071e9",
                  "borderRadius": 5,
                  "elevation": 1,
                  "flex": 1,
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
              testID="btnErrRetry"
            >
              <Text
                style={
                  Object {
                    "color": "#ffffffff",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 16,
                    "fontWeight": "normal",
                    "textAlign": undefined,
                  }
                }
              >
                [missing "en.GENERICS.RETRY" translation]
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
